# FMplayer

app/: build.gradle
app/src/androidTest/java/com/jzy/ffmplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmplayer.cpp  FFmplayer.h  JniCallbackHelper.cpp  JniCallbackHelper.h  VideoChannnel.cpp  VideoChannnel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/jzy/ffmplayer/: FFmplayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jzy/ffmplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
